--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "url": "https://github.com/neovim/node-client.git"
   },
   "dependencies": {
-    "domjs": "^0.3.2"
+    "create-react-class": "^15.6.3",
+    "jsdom": "^14.0.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1"
   }
 }
